--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,4 @@
 target=android-17
 android.library.reference.1=../../LIBS/ActionBarSherlock
 android.library.reference.2=../../LIBS/android-fly-in-app-navigation
-android.library.reference.3=../../InformaCam
+android.library.reference.3=../InformaCam
