--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.witness.iwitness"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    android:installLocation="auto" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -11,6 +12,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="org.witness.informacam.ICP" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +21,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="org.witness.iwitness.IWitness"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
