--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Sherlock.Light.NoActionBar">
         <activity
             android:name="org.witness.iwitness.IWitness"
             android:configChanges="keyboardHidden|orientation|screenSize"
