--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../LIBS/ActionBarSherlock
+android.library.reference.1=../ActionBarSherlock/library
 android.library.reference.2=../InformaCam
