--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -60,15 +59,19 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.media.action.IMAGE_CAPTURE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <data
                     android:mimeType="application/*"
                     android:pathPattern=".*.ictd"
@@ -76,7 +79,9 @@
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <data
                     android:mimeType="*/*"
                     android:pathPattern=".*\\.ictd"
@@ -89,18 +94,18 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Sherlock.Light" />
         <activity
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name="org.witness.iwitness.app.HomeActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
         <activity
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name="org.witness.iwitness.app.LoginActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
         <activity
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name="org.witness.iwitness.app.WipeActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
         <activity
             android:name="org.witness.informacam.ui.WizardActivity"
@@ -113,8 +118,8 @@
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
         <activity
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:name="org.witness.informacam.ui.CameraActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
 
         <service
@@ -135,6 +140,10 @@
             android:exported="false" />
         <service
             android:name="org.witness.informacam.crypto.SignatureService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name="org.witness.informacam.utils.BackgroundProcessor"
             android:enabled="true"
             android:exported="false" />
     </application>
