- added new assets for audio recorder (still not fully implemented) - updated to latest IC commit - stubs for changing language (still pending)

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -109,6 +109,10 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
         <activity
+            android:name="org.witness.iwitness.app.PreferencesActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name" />
+        <activity
             android:name="org.witness.informacam.ui.WizardActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
