--- a/app/project.properties
+++ b/app/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../external/ActionBarSherlock/actionbarsherlock
-android.library.reference.2=../external/InformaCam
+android.library.reference.1=../../../LIBS/ActionBarSherlock
+android.library.reference.2=../../InformaCam
