--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -28,7 +28,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.NoActionBar" >
+        android:theme="@style/Theme.Sherlock.Light.NoActionBar"
+        android:name="org.witness.informacam.InformaCam"
+        android:largeHeap="true"
+          >
         <receiver
             android:name="org.witness.informacam.utils.InformaCamBroadcaster"
             android:enabled="true"
@@ -127,15 +130,21 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
 
+        <!-- 
         <service
             android:name="org.witness.informacam.InformaCam"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false" /> -->
+            
         <service
             android:name="org.witness.informacam.informa.InformaService"
             android:enabled="true"
             android:exported="false" />
-        <service
+         <service
+            android:name="org.witness.informacam.utils.BackgroundProcessor"
+            android:enabled="true"
+            android:exported="false" />
+       <!--  <service
             android:name="org.witness.informacam.storage.IOService"
             android:enabled="true"
             android:exported="false" />
@@ -146,11 +155,8 @@
         <service
             android:name="org.witness.informacam.crypto.SignatureService"
             android:enabled="true"
-            android:exported="false" />
-        <service
-            android:name="org.witness.informacam.utils.BackgroundProcessor"
-            android:enabled="true"
-            android:exported="false" />
+            android:exported="false" /> -->
+       
     </application>
 
 </manifest>
