--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/JakeWharton/ActionBarSherlock.git
 [submodule "external/InformaCam"]
 	path = external/InformaCam
-	url = git://github.com/guardianproject/InformaCam.git
+	url = git@github.com:guardianproject/InformaCam.git
