--- a/app/.classpath
+++ b/app/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="/InformaCam/libs/android-support-v4.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/InformaCam/libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="/InformaCam/libs/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="libs/HockeySDK.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
