change submodules to use HTTPS URLs

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/ActionBarSherlock"]
 	path = external/ActionBarSherlock
-	url = git://github.com/JakeWharton/ActionBarSherlock.git
+	url = https://github.com/JakeWharton/ActionBarSherlock.git
 [submodule "external/InformaCam"]
 	path = external/InformaCam
-	url = git@github.com:guardianproject/InformaCam.git
+	url = https://github.com/guardianproject/InformaCam.git
