--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -23,6 +23,12 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
+    
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:anyDensity="true" />
 
     <application
         android:allowBackup="true"
@@ -59,7 +65,7 @@
 
         <activity
             android:name="org.witness.iwitness.IWitness"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -99,7 +105,7 @@
             android:theme="@style/Theme.Sherlock.Light" />
         <activity
             android:name="org.witness.iwitness.app.HomeActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
@@ -117,7 +123,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="org.witness.informacam.ui.WizardActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
         <activity
