--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.witness.iwitness"
     android:installLocation="preferExternal"
-    android:versionCode="9"
-    android:versionName="beta1-build9" >
+    android:versionCode="11"
+    android:versionName="beta1-build11" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     
     <supports-screens
         android:smallScreens="true"
@@ -135,13 +136,10 @@
             android:name="org.witness.informacam.ui.CameraActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
-
+        <activity android:name="org.witness.informacam.transport.DriveTransport" />
+        
         <service
             android:name="org.witness.informacam.informa.InformaService"
-            android:enabled="true"
-            android:exported="false" />
-         <service
-            android:name="org.witness.informacam.utils.BackgroundProcessor"
             android:enabled="true"
             android:exported="false" />
        <service android:name="info.guardianproject.cacheword.CacheWordService" 
