--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -102,7 +102,7 @@
             android:name="org.witness.iwitness.app.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock.Light" />
+            android:theme="@style/EditorTheme" />
         <activity
             android:name="org.witness.iwitness.app.HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
