--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -102,7 +102,9 @@
             android:name="org.witness.iwitness.app.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/EditorTheme" />
+            android:theme="@style/EditorTheme"
+            android:screenOrientation="portrait"
+             />
         <activity
             android:name="org.witness.iwitness.app.HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
