Changes to editor so media is synched across fragments. Updated to latest IC commit.

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -140,9 +140,10 @@
             android:name="org.witness.informacam.informa.InformaService"
             android:enabled="true"
             android:exported="false" />
-       <service android:name="info.guardianproject.cacheword.CacheWordService" 
-           android:enabled="true" 
-           android:exported="false" />
+        <service
+            android:name="info.guardianproject.cacheword.CacheWordService"
+            android:enabled="true"
+            android:exported="false" />
        
     </application>
 
