--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -24,21 +24,20 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    
+
     <supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"
+        android:anyDensity="true"
         android:largeScreens="true"
-        android:anyDensity="true" />
+        android:normalScreens="true"
+        android:smallScreens="true" />
 
     <application
+        android:name="org.witness.informacam.InformaCam"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.NoActionBar"
-        android:name="org.witness.informacam.InformaCam"
         android:largeHeap="true"
-          >
+        android:theme="@style/Theme.Sherlock.Light.NoActionBar" >
         <receiver
             android:name="org.witness.informacam.utils.InformaCamBroadcaster"
             android:enabled="true"
@@ -80,6 +79,7 @@
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="android.intent.action.VIEW" />
 
                 <data
@@ -89,6 +89,7 @@
             </intent-filter>
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="android.intent.action.VIEW" />
 
                 <data
@@ -135,7 +136,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
         <activity android:name="org.witness.informacam.transport.DriveTransport" />
-        
+
         <service
             android:name="org.witness.informacam.informa.InformaService"
             android:enabled="true"
@@ -144,7 +145,9 @@
             android:name="info.guardianproject.cacheword.CacheWordService"
             android:enabled="true"
             android:exported="false" />
-       
+        <service android:name="org.witness.informacam.transport.GlobaleaksTransport"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
