--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -111,7 +111,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
+            android:theme="@style/HomeTheme" />
         <activity
             android:name="org.witness.iwitness.app.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
