--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -142,6 +142,9 @@
             android:name="org.witness.informacam.informa.InformaService"
             android:enabled="true"
             android:exported="false" />
+        <service android:name="org.witness.informacam.storage.intake.Intake"
+            android:enabled="true"
+            android:exported="false" />
         <service
             android:name="info.guardianproject.cacheword.CacheWordService"
             android:enabled="true"
