--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.witness.iwitness"
     android:installLocation="preferExternal"
-    android:versionCode="11"
-    android:versionName="beta1-build11" >
+    android:versionCode="12"
+    android:versionName="0.1.12" >
 
     <uses-sdk
         android:minSdkVersion="10"
