better organization of intents between activities threading fix for list adapters stubs towards implementing the verified mobile media share intent (not tested, but doesn't hurt that it's in there.) general cleanup updated to latest IC commit

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -79,6 +79,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <intent-filter>
+                <action android:name="info.guardianproject.action.VERIFIED_MOBILE_MEDIA" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <action android:name="android.intent.action.VIEW" />
