--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -134,7 +134,8 @@
         <activity
             android:name="org.witness.iwitness.app.PreferencesActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/HomeTheme" />
         <activity
             android:name="org.witness.iwitness.app.WizardActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
