--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity
             android:name="org.witness.iwitness.IWitness"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -123,6 +124,7 @@
             android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
         <activity
             android:name="org.witness.iwitness.app.LoginActivity"
+            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" />
         <activity
