--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -119,6 +119,10 @@
             android:screenOrientation="portrait"
              />
         <activity
+            android:name="org.witness.informacam.app.MetadataActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+             />
+        <activity
             android:name="org.witness.informacam.app.HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
