--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.witness.informacam.app"
+    package="org.ibanet.informacam"
     android:installLocation="preferExternal"
     android:versionCode="37"
     android:versionName="0.1.37" >
