--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ibanet.informacam"
     android:installLocation="preferExternal"
-    android:versionCode="30"
-    android:versionName="0.1.30" >
+    android:versionCode="31"
+    android:versionName="0.1.31" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -176,6 +176,7 @@
         <service android:name="org.witness.informacam.transport.GlobaleaksTransport"
             android:enabled="true"
             android:exported="false" />
+ <activity android:name="net.hockeyapp.android.UpdateActivity" />
     </application>
 
 </manifest>
