--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -110,6 +110,25 @@
                     android:mimeType="application/ictd"
                     android:scheme="file" />
             </intent-filter>
+            <intent-filter>
+			        <action android:name="android.intent.action.VIEW" />
+			        <category android:name="android.intent.category.DEFAULT" />
+			        <category android:name="android.intent.category.BROWSABLE" />
+			        
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.SEND" />
+				<action android:name="android.intent.action.PICK" />
+				<action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.GET_CONTENT" />
+				
+			        <data android:scheme="file" />
+			        <data android:mimeType="*/*" />
+			        <data android:pathPattern=".*\\.ictd" />
+			        <data android:host="*" />
+			    </intent-filter>
+            
         </activity>
         <activity
             android:name="org.witness.informacam.app.EditorActivity"
@@ -117,50 +136,68 @@
             android:label="@string/app_name"
             android:theme="@style/EditorTheme"
             android:screenOrientation="portrait"
+            android:exported="false"
              />
         <activity
             android:name="org.witness.informacam.app.MetadataActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="false"
+             android:label="@string/app_name"   
              />
         <activity
             android:name="org.witness.informacam.app.HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/HomeTheme" />
+            android:theme="@style/HomeTheme" 
+            android:exported="false"
+            />
         <activity
             android:name="org.witness.informacam.app.LoginActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:exported="false"
+             />
         <activity
             android:name="org.witness.informacam.app.WipeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.Transparent"
+            android:exported="false"
             />
         <activity
             android:name="org.witness.informacam.app.PreferencesActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/HomeTheme" />
+            android:theme="@style/HomeTheme"
+            android:exported="false"
+             />
         <activity
             android:name="org.witness.informacam.app.WizardActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
             android:theme="@style/WizardTheme"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:exported="false"
+             />
         <activity
             android:name="org.witness.informacam.ui.SurfaceGrabberActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" 
+            android:exported="false"
+            />
         <activity
             android:name="org.witness.informacam.ui.CameraActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" />
-        <activity android:name="org.witness.informacam.transport.DriveTransport" />
+            android:label="@string/app_name" 
+            android:exported="false"
+            />
+        <activity android:name="org.witness.informacam.transport.DriveTransport" 
+            android:exported="false"
+            />
 
         <service
             android:name="org.witness.informacam.informa.InformaService"
