--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="0.1.42" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -38,7 +38,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@style/Theme.Sherlock.Light.NoActionBar" >
+        android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         <receiver
             android:name="org.witness.informacam.utils.InformaCamBroadcaster"
             android:enabled="true"
