--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -130,6 +130,36 @@
 			    </intent-filter>
             
         </activity>
+         <activity
+            android:name="org.witness.informacam.app.HashActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.VIEW" />
+				<action android:name="android.intent.action.SEND" />
+				<action android:name="android.intent.action.PICK" />
+				<action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.GET_CONTENT" />
+				
+                <data android:mimeType="image/*" />
+
+            </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="android.intent.action.VIEW" />
+				<action android:name="android.intent.action.SEND" />
+				<action android:name="android.intent.action.PICK" />
+				<action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.GET_CONTENT" />
+				
+                <data android:mimeType="video/*" />
+
+            </intent-filter>
+                                    
+        </activity>
         <activity
             android:name="org.witness.informacam.app.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
