--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -246,6 +246,23 @@
             android:exported="false" />
         <activity android:name="net.hockeyapp.android.UpdateActivity" />
 
+        <receiver
+        android:name="org.witness.informacam.intake.DCIMObserver"
+        android:enabled="true" >
+        <intent-filter>
+            <action android:name="com.android.camera.NEW_PICTURE" />
+            <action android:name="android.hardware.action.NEW_PICTURE" />
+            <data android:mimeType="image/*" />
+        </intent-filter>
+         <intent-filter>
+            <action android:name="com.android.camera.NEW_VIDEO" />
+            <action android:name="android.hardware.action.NEW_VIDEO" />
+            <data android:mimeType="video/*" />
+        </intent-filter>
+    </receiver>
+    
     </application>
+    
+    
 
 </manifest>
