--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.witness.informacam.app"
     android:installLocation="preferExternal"
-    android:versionCode="148"
-    android:versionName="0.1.48" >
+    android:versionCode="150"
+    android:versionName="0.1.50" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -38,7 +38,6 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:largeHeap="true"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         <receiver
             android:name="org.witness.informacam.utils.InformaCamBroadcaster"
@@ -168,7 +167,11 @@
             android:theme="@style/EditorTheme"
             android:screenOrientation="portrait"
             android:exported="false"
-             />
+            android:uiOptions="splitActionBarWhenNarrow"
+             >
+            <meta-data android:name="android.support.UI_OPTIONS"
+                   android:value="splitActionBarWhenNarrow" />
+        </activity>
         <activity
             android:name="org.witness.informacam.app.MetadataActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
