--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -165,7 +165,6 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/EditorTheme"
-            android:screenOrientation="portrait"
             android:exported="false"
             android:uiOptions="splitActionBarWhenNarrow"
              >
@@ -243,6 +242,13 @@
         <activity
             android:name="org.witness.informacam.ui.CameraActivity"
             android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name" 
+            android:exported="false"            
+            />
+        <activity
+            android:name="org.witness.informacam.ui.AlwaysOnActivity"
+            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" 
             android:exported="false"
