--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.witness.informacam.app"
-    android:installLocation="preferExternal"
+    android:installLocation="auto"
     android:versionCode="155"
     android:versionName="0.1.55" >
 
@@ -35,7 +35,7 @@
 
     <application
         android:name="org.witness.informacam.InformaCam"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
