update gitmodules to add charts

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/InformaCam"]
 	path = external/InformaCam
 	url = https://github.com/guardianproject/InformaCam.git
+[submodule "external/mpandroidchart"]
+	path = external/mpandroidchart
+	url = https://github.com/PhilJay/MPAndroidChart.git
