--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -68,7 +68,6 @@
         <activity
             android:name="org.witness.informacam.app.InformaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
-            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -181,13 +180,11 @@
             android:name="org.witness.informacam.app.HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|layoutDirection"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/HomeTheme" 
             android:exported="false"
             />
         <activity
             android:name="org.witness.informacam.app.LoginActivity"
-            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:exported="false"
@@ -212,14 +209,12 @@
             android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
             android:theme="@style/WizardTheme"
-            android:screenOrientation="portrait"
             android:exported="false"
              />
         <activity
             android:name="org.witness.informacam.ui.SurfaceGrabberActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" 
             android:exported="false"
             />
       
@@ -232,7 +227,6 @@
             />
         <activity
             android:name="org.witness.informacam.ui.AlwaysOnActivity"
-            android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" 
             android:exported="false"
@@ -274,9 +268,8 @@
             android:name="info.guardianproject.iocipher.camera.GalleryActivity"
             android:label="@string/app_name" 
             android:uiOptions="splitActionBarWhenNarrow"
-            android:icon="@drawable/ic_launcher"
+           	android:configChanges="keyboardHidden|orientation|screenSize"
             >
-            
             <intent-filter>                
 				<action android:name="info.guardianproject.action.SECURE_STILL_IMAGE_CAMERA" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -285,42 +278,48 @@
 				<action android:name="info.guardianproject.action.SECURE_VIDEO_CAMERA" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-                
-            
             
             <intent-filter>
                 <action android:name="android.provider.MediaStore.ACTION_VIDEO_CAPTURE"/>
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="*/*" />
             </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.provider.MediaStore.ACTION_IMAGE_CAPTURE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            
         </activity>
         
 
          <activity
             android:name="info.guardianproject.iocipher.camera.StillCameraActivity"
-            android:label="Secure Selfie"
+            android:label="Secure Still Camera"
                 android:theme="@android:style/Theme.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
+                android:hardwareAccelerated="true"
                 />
 
                  <activity
             android:name="info.guardianproject.iocipher.camera.VideoCameraActivity"
-            android:label="Secure Video (Native)"
+            android:label="Secure Video Camera"
                 android:theme="@android:style/Theme.NoTitleBar"
-                
+                android:hardwareAccelerated="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
                 />                        
         
                  <activity
             android:name="info.guardianproject.iocipher.camera.viewer.ImageViewerActivity"
-            android:label="Secure Selfie Viewer"
+            android:label="Secure Image Viewer"
             
             android:configChanges="keyboardHidden|orientation|screenSize"
                 android:theme="@android:style/Theme.NoTitleBar"/>
         
                   <activity
             android:name="info.guardianproject.iocipher.camera.viewer.MjpegViewerActivity"   
-            
+             android:label="Secure Video Viewer"
             android:configChanges="keyboardHidden|orientation|screenSize"         
                 android:theme="@android:style/Theme.NoTitleBar"/>
         
